[workspace]
exclude = ["./xtask"]

[profile.release]
lto = true # コンパイル時間が著しく長くなってしまう場合は無し

[package]
name = "judge"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# 2023
ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs.git", rev = "d2d82931ab6a553d2293c3eb978152d7fa748e8d" }
once_cell = "=1.17.1"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.2.1"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=3.14.2", features = ["c_raw", "rand", "stringly_conversions"] }
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.4.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"

# 2020
num = "=0.4.0"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.3.3"
ndarray = "=0.15.6"
nalgebra = "=0.32.2"
alga = "=0.9.3"
libm = "=0.2.6"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = "=0.2.8"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.1"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=1.9.3"
regex = "=1.7.3"
lazy_static = "=1.4.0"
ordered-float = "=3.6.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.10.5"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.3", features = ["derive"] }
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = { version = "=1.10.0", features = ["const_generics", "const_new", "write", "union", "serde", "arbitrary"] }
