[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
license = "CC0-1.0"
publish = false

[dependencies]
askama = "0.12.0"
build-info = "0.0.30"
camino = "1.1.4"
cargo_metadata = "0.15.3"
clap = { version = "4.1.13", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
fs-err = "2.9.0"
indexmap = { version = "1.9.3", features = ["serde-1"] }
itertools = "0.10.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.3"
toml_edit = "0.19.8"

[build-dependencies]
build-info-build = "0.0.30"
